# Aurora-Design

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.lite  README.md  README.zh.md  README_OLLAMA.md  add_more_i18n.py  docker-compose.full.yml  docker-compose.yml  fix_imports.py  pyproject.toml  test_graph.py  test_graph2.py  test_knowledge_pipeline.py
.codegraph/: daemon.pid
configs/: aurora.toml  chatbi.toml
design-skills/: ADAPTERS.md  README.md
doc/: frontend-refactor-progress.md
docker/: entrypoint.sh  load_images.sh  save_images.sh
docs/: index.html  phase1.md  phase2.md  phase3.md  phase4.md
frontend/: README.md  components.json  electron-builder.yml  fix_ts_errors.py  fix_ts_errors2.py  fix_ts_errors3.py  fix_ui_imports.py  index.html  package-lock.json  package.json  patch_data.py  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  test_api.js  test_graph.py  vite.config.ts  vitest.config.ts
scratch/: add_i18n_keys.py  inject_graph_control_keys.py  inject_upload_keys.py
scripts/: create_offline_package.sh  download_dependencies.sh  download_docker_images.sh  download_models.sh  offline_configure.sh  offline_install.sh  offline_upgrade.sh  offline_verify.sh
tasks/: RAGAS_IMPLEMENTATION_SUMMARY.md  RERANKER_IMPLEMENTATION_SUMMARY.md  bugfix-document-content-loss.md  gap-closure-plan.md  k8s-todo.md  knowledge-graph-enhancement.md  langfuse-todo.md  lessons.md  lightrag-migration-plan-supplement.md  lightrag-migration-plan.md  role-llm-config.md  todo-ollama-compat.md  todo-p2-4.md  todo-ragas-evaluation.md  (+4 more)
(+382 files in other folders)
