[project]
name = "chatbi"
version = "0.1.0"
description = "ChatBI: Agentic AI Data Platform"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
chatbi-core = { workspace = true }
chatbi-serve = { workspace = true }
chatbi-ext = { workspace = true }
chatbi-app = { workspace = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
