[project]
name = "aurora"
version = "0.1.0"
description = "Aurora: Agentic AI Data Platform"
requires-python = ">=3.10"
dependencies = ["aurora-app"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
aurora-core = { workspace = true }
aurora-serve = { workspace = true }
aurora-ext = { workspace = true }
aurora-app = { workspace = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
